create base.html file

--- a/photos/templates/all-photos/index.html
+++ b/photos/templates/all-photos/index.html
@@ -1,3 +1,1 @@
-{% load django_bootstrap5 %}
-<h1>This is homepage
-  </h1
+{%extends 'all-photos/base.html'%} {% block content %} {{block.super}} {% endblock %}
