--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  {% block content %}
+  {% block content %} {% include 'navbar.html' %}
   <h1>Mi-Galeria</h1>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_javascript %}{% endblock %}
