--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -18,11 +18,10 @@
 </head>
 
 <body>
-  {% block content %} {% include 'navbar.html' %}
-  <h1>Mi-Galeria</h1>
-  {% include 'footer.html' %}
+  {% include 'navbar.html' %}
+  <h1>Mi-Galeria</h1>{% block content %} {% endblock %} {% include 'footer.html' %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  {% bootstrap_javascript %}{% endblock %}
+  {% bootstrap_javascript %}
 </body>
 
 </html>
