--- a/photos/templates/footer.html
+++ b/photos/templates/footer.html
@@ -1,22 +1,24 @@
 <!-- Footer -->
-<footer class="page-footer font-small cyan darken-3">
+<footer class="page-footer font-small fixed-bottom " style="background-color: EBAD99;">
+  <hr>
   <div class="container">
 
     <div class="row">
-
-      <div class="col-md-12 py-5">
-        <!-- <h3 class="text-center">Contacts Us</h3> -->
-        <div class="mb-3 d-flex center">
+      <div class="col-md-4"></div>
+      <div class="col-md-4 py-2">
+        <h2 class="text-center mb-">Contacts Us</h2>
+        <div class="d-flex justify-content-between">
           <a class="fb-ic"> <i class="fa-brands fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
           <a class="tw-ic"> <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
           <a class="gplus-ic"> <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
           <a class="li-ic"> <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
           <a class="ins-ic"> <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
         </div>
+        <div class="col-md-4"></div>
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2022 Copyright:
+  <div class="footer-copyright text-center py-1">© 2022 Copyright:
     <a href="https://github.com/CosBett"> CosBett</a>
   </div>
 </footer>
