--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg" id="navbar" style="background-color: EBAD99;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Mi-Galeria</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,19 +14,17 @@
            Location
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            {% for location in all_locations %}
             <li>
-              <a class="dropdown-item" href="#">Nairobi</a>
+              <a href="/location/{{location.name}}">{{location.name}}</a>
+
             </li>
-            <li><a class="dropdown-item" href="#">Mombasa</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Kericho</a></li>
+            {% endfor %}
           </ul>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="d-flex" role="search" action="{% url 'search_results' %}">
+        <input class="form-control me-2" type="text" placeholder="Search category" aria-label="Search" name="searchImg">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
