style Navbar color and font

--- a/photos/templates/footer.html
+++ b/photos/templates/footer.html
@@ -1,12 +1,12 @@
 <!-- Footer -->
-<footer class="page-footer font-small fixed-bottom " style="background-color: EBAD99;">
+<footer class="page-footer font-small fixed-bottom " style="background-color:#EBAD99;height: 12vh;">
   <hr>
   <div class="container">
 
     <div class="row">
       <div class="col-md-4"></div>
       <div class="col-md-4 py-2">
-        <h2 class="text-center mb-">Contacts Us</h2>
+        <h2 style="color: white;font-family: 'Lobster', cursive; font-size: 22px;" class="text-center mb-">Contacts Us</h2>
         <div class="d-flex justify-content-between">
           <a class="fb-ic"> <i class="fa-brands fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
           <a class="tw-ic"> <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a>
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-1">© 2022 Copyright:
+  <div style="color: white; font-style: italic;" class="footer-copyright text-center py-1">© 2022 Copyright:
     <a href="https://github.com/CosBett"> CosBett</a>
   </div>
 </footer>
