--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="color: white;">
         <li class="nav-item">
-          <a style="color: white;" class="nav-link active" aria-current="page" href="#">Home</a>
+          <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'location'%}">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
