--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -18,16 +18,27 @@
 </head>
 
 <body>
-  {% include 'navbar.html' %}
-  <div class="row container">
-    <div class="col-md-4">
-      <div class="card shadow">
-        <h1>Mi-Galeria</h1>
+  <div class="mb-2"> {% include 'navbar.html' %}
+
+  </div>
+  <div class="row container-fluid">
+    <div class="col-md-2 ">
+      <div class="card shadow position-fixed text-center p-4">
+        <h1 class="px-3" style="font-family: 'Lobster', cursive; font-size: 25px;text-align: center;margin-bottom: 2%;">Categories</h2>
+          <ul>
+            {% for category in all_categories %}
+            <li>
+              <div class="card p-1 mt-1 d-flex justify-content-center shadow ">
+                <a href="/category/{{category.name}}">{{category.name}}</a>
+              </div>
+            </li>
+            {% endfor %}
+          </ul>
       </div>
     </div>
-    <div class="col-md-8">
-      {% block content %} {% endblock %}
-    </div>
+    <div class="col-md-10 ">
+      <h1 style="font-family: 'Lobster', cursive; font-size: 25px;text-align: center;margin-bottom: 1%;">Pictures Gallery </h1>
+      {% block content %} {% endblock %} </div>
   </div>
   {% include 'footer.html' %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
