updateImage  models class methods

--- a/photos/templates/all-photos/index.html
+++ b/photos/templates/all-photos/index.html
@@ -14,7 +14,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark fa-lg   fa-2x"></i></button>
             </div>
             <div class="modal-body">
-              <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid" style="width: 100%;"><br>
+              <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid"><br>
               <p class="imgdesc text-center">{{image.description}}</p><br>
             </div>
             <div class=" modal-footer ">
