update modal target id to display images

--- a/photos/templates/all-photos/location.html
+++ b/photos/templates/all-photos/location.html
@@ -1,6 +1,6 @@
 {%extends 'all-photos/base.html'%} {% block content %} {{block.super}}
 
-<h1> This is location page </h1>
+<h1> This is location page </h1>{% endblock %}
 <!-- <div class="row">
   {% if location_pictures %}{%for image in location_pictures%}
   <div class="col-md-3">
