--- a/photos/templates/all-photos/index.html
+++ b/photos/templates/all-photos/index.html
@@ -3,10 +3,10 @@
   {%for image in all_images%}
   <div class="col-md-2 col-sm-4 p-0 ">
     <div class="card-columns" style="padding: 1%; border-radius: 15px;height: fit-content;">
-      <img data-bs-toggle="modal" data-bs-target="#exampleModal" src="{{image.image.url}}" alt="{{image.name}}" style="object-fit: coverwidth;height: 29vh;border-radius: 3%; margin-bottom: 0;" id="img_poster">
+      <img data-bs-toggle="modal" data-bs-target="#exampleModal{{image.id}}" src="{{image.image.url}}" alt="{{image.name}}" style="object-fit: coverwidth;height: 29vh;border-radius: 3%; margin-bottom: 0;" id="img_poster">
     </div>
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="exampleModal{{image.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
             <div class="modal-header">
