--- a/photos/templates/all-photos/location.html
+++ b/photos/templates/all-photos/location.html
@@ -1,8 +1,8 @@
 {%extends 'all-photos/base.html'%} {% block content %} {{block.super}}
 
-<h1> This is location page </h1>{% endblock %}
-<!-- <div class="row">
-  {% if location_pictures %}{%for image in location_pictures%}
+
+<div class="row">
+  {% if images %}{% for image in images %}
   <div class="col-md-3">
     <img data-bs-toggle="modal" data-bs-target="#exampleModal" src="{{image.image.url}}" alt="{{image.name}}" style="width:30vw;border-radius: 15px;">
     <div class="modal-dialog modal-dialog-centered">
@@ -29,4 +29,4 @@
     </div>
   </div>
   {%endfor%} {% endif %}
-</div>{% endblock %} -->
+</div>{% endblock %}
