--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg " id="navbar" style="background-color:#EBAD99;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><span style="color:black;font-family: 'Lobster', cursive;font-size: 37px;font-weight: 800;">Mi</span><span style="color:#115512; font-size: larger;font-weight: 500;">&nbsp-</span><span style="color:white;font-family: 'Lobster', cursive;font-size: 27px;font-weight: 800;"> Galeria</span>
+    <a class="navbar-brand" href="{% url 'homepage' %}"><span style="color:black;font-family: 'Lobster', cursive;font-size: 37px;font-weight: 800;">Mi</span><span style="color:#115512; font-size: larger;font-weight: 500;">&nbsp-</span><span style="color:white;font-family: 'Lobster', cursive;font-size: 27px;font-weight: 800;"> Galeria</span>
      </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="color: white;">
         <li class="nav-item">
-          <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'location'%}">Home</a>
+          <a style="color: white;" class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -17,7 +17,7 @@
           <ul style="color:#115512;border-radius: 8%; box-shadow: #115512;padding-left: 12%;width: 10%;" class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
             {% for location in all_locations %}
             <li>
-              <a href="/location/{{location.name}}">{{location.name}}</a>
+              <a href="location/{{location.name}}">{{location.name}}</a>
 
             </li>
             {% endfor %}
