--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,12 @@ h1 {
   color: green;
 }
 
+p {
+  line-height: 50%;
+  font-size: x-small;
+  font-family: 'Tangerine', cursive;
+}
+
 
 /* img {
   max-height: 5%;
