--- a/photos/templates/all-photos/search.html
+++ b/photos/templates/all-photos/search.html
@@ -6,27 +6,32 @@
   <h2> Found 0 images for the searched {{message}}</h2>
   {% endif %}
 </div>
-<div class="row">
+<div class="row overflow-auto" style="height:70vh;">
   {% if images %}{%for image in images%}
-  <div class="col-md-3">
-    <img data-bs-toggle="modal" data-bs-target="#exampleModal" src="{{image.image.url}}" alt="{{image.name}}" style="width:30vw;border-radius: 15px;">
+  <div class="col-md-2 col-sm-4 p-0 ">
+    <div class="card-columns" style="padding: 1%; border-radius: 15px;height: fit-content;">
+      <img data-bs-toggle="modal" data-bs-target="#exampleModal{{image.id}}" src="{{image.image.url}}" alt="{{image.name}}" style="object-fit:cover;height: 29vh;border-radius: 3%; margin-bottom: 0;" id="img_poster">
+    </div>
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="exampleModal{{image.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">{{image.name}}</h5>
-
+              <h5 class="modal-title" id="exampleModalLabel" style="font-size:large; font-weight:bold;font-family:'Yrsa', serif;color: #115512;">{{image.name}}</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark fa-lg   fa-2x"></i></button>
             </div>
             <div class="modal-body">
-              <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid" style="width: 100%;"><br>
-              <p class="text-center">{{image.description}}</p><br>
+              <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid" style="object-fit:cover;text-align: center; width:70vh;height: 58vh;border-radius: 3%;"><br>
+              <p class="text-center img_description" style="line-height: 90%; font-size: small;font-weight: 400;font-family: 'Yrsa', serif; ">{{image.description}}</p><br>
             </div>
-            <div class=" modal-footer ">
-              <input class="form-control input-lg" type="text" value="{{image.image.url}}" id="{{image.id}}.url">
-              <button class="btn btn-success btn-sm" onclick="copyLink('{{image.id}}.url')">Copy</button>
-              <button type="button" class="btn btn-outline-danger btn-sm" data-bs-dismiss="modal">Close </button>
+            <div class=" modal-footer " style="line-height: 50%;">
+              <div class="div" style="color:#EBAD99;font-family:'Yrsa', serif;font-size:small;line-height:0.6;">
+                <span> Category: </span><span class="btn btn-sm btn-outline-success ">{{image.category}}</span>
+                <span> Location: </span><span class="btn btn-sm btn-outline-success ">{{image.location}}</span>
+              </div>
+              <input class="form-control input-lg bg-light " type="text" style=" line-height: 50%;font-size:small; " value="{{image.image.url}} " id="{{image.id}}.url ">
+              <!-- <button class="btn btn-success btn-sm " onclick="copyLink( '{{image.id}}.url') ">Copy</button> -->
+              <!-- <button type="button " class="btn btn-outline-danger btn-sm " data-bs-dismiss="modal">Close </button> -->
             </div>
           </div>
         </div>
