create view function for images filter by category

--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -28,7 +28,7 @@
           <ul>
             {% for category in all_categories %}
             <li>
-              <div class="card p-1 mt-1 d-flex justify-content-center shadow ">
+              <div class="card p-1 mt-1 d-flex justify-content-center shadow rounded-pill">
                 <a href="/category/{{category.name}}">{{category.name}}</a>
               </div>
             </li>
