--- a/photos/templates/all-photos/search.html
+++ b/photos/templates/all-photos/search.html
@@ -1,9 +1,9 @@
 {%extends 'all-photos/base.html'%} {% block content %} {{block.super}}
 <div class="row">
   {% if images %}
-  <h2>Found {{ images|length }} of searched term {{message}}</h2>
+  <h2>Found {{ images|length }} of searched {{message}} category</h2>
   {% else %}
-  <h2> Found 0 images for the searched {{message}}</h2>
+  <h2> Found 0 images for the searched {{message}} category</h2>
   {% endif %}
 </div>
 <div class="row overflow-auto" style="height:70vh;">
@@ -12,7 +12,7 @@
     <div class="card-columns" style="padding: 1%; border-radius: 15px;height: fit-content;">
       <img data-bs-toggle="modal" data-bs-target="#exampleModal{{image.id}}" src="{{image.image.url}}" alt="{{image.name}}" style="object-fit:cover;height: 29vh;border-radius: 3%; margin-bottom: 0;" id="img_poster">
     </div>
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered rounded-3">
       <div class="modal fade" id="exampleModal{{image.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog modal-dialog-centered modal-dialog-scrollable">
           <div class="modal-content">
