--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -25,8 +25,8 @@
         </li>
       </ul>
       <form class="d-flex" role="search" action="{% url 'search_results' %}">
-        <input class="form-control me-2" type="text" placeholder="Search category" aria-label="Search" name="searchImg">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2 rounded-pill" type="text" placeholder="Search category" aria-label="Search" name="searchImg">
+        <button class="btn btn-outline-success rounded-pill" type="submit">Search</button>
       </form>
     </div>
   </div>
