fix page responsiveness

--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -21,8 +21,8 @@
   <div class="mb-2"> {% include 'navbar.html' %}
 
   </div>
-  <div class="row container-fluid">
-    <div class="col-md-2 ">
+  <div class="row container-fluid ">
+    <div class="col-md-2 col-sm-4 d-none d-lg-block ">
       <div class="card shadow position-fixed text-center p-4">
         <h1 class="px-3" style="font-family: 'Lobster', cursive; font-size: 25px;text-align: center;margin-bottom: 2%;">Categories</h2>
           <ul>
