--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="{% url 'homepage' %}"><span style="color:black;font-family: 'Lobster', cursive;font-size: 37px;font-weight: 800;">Mi</span><span style="color:#115512; font-size: larger;font-weight: 500;">&nbsp-</span><span style="color:white;font-family: 'Lobster', cursive;font-size: 27px;font-weight: 800;"> Galeria</span>
      </a>
     <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span ><i class="fa fa-bars fa-lg white-text mr-md-5 mr-3 fa-2x"></i></span>
+      <span ><i class="fa fa-bars  fa-lg white-text mr-md-5 mr-3 fa-2x d-lg-none"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="color: white;">
